# DesignPatterns

./: .gitignore
Adapter/: CMakeLists.txt  main.cpp  readme.md
Adapter/include/: Gamepad.hpp  Playable.hpp  PlayableAdapter.hpp  Player.hpp  Tetris.hpp  TetrisAdapter.hpp
Adapter/src/: Gamepad.cpp  Player.cpp  Tetris.cpp  TetrisAdapter.cpp
Decorator/: CMakeLists.txt  main.cpp
Decorator/include/: ConsoleLogger.hpp  DecoratorLogger.hpp  Logger.hpp  TimeDecoratorLogger.hpp
Decorator/src/: ConsoleLogger.cpp  TimeDecoratorLogger.cpp
Proxy/: CMakeLists.txt  main.cpp
Proxy/include/: FileManager.hpp  FileManagerAPI.hpp  IFileManager.hpp  ProxyFileManager.hpp  SessionManager.hpp
Proxy/src/: FileManager.cpp  FileManagerAPI.cpp  ProxyFileManager.cpp  SessionManager.cpp
